--- a/test.html
+++ b/test.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Test</title>
+    <meta content="width=device-width, initial-scale=1" name="viewport">
 </head>
 <body style="
 background-image: url('https://picsum.photos/2048');
